precompiles/utils/macro/tests/precompile/compile-fail/discriminant/missing-param.stderr
error: The discriminant function must only take the code address (H160) as parameter.
  --> tests/precompile/compile-fail/discriminant/missing-param.rs:25:2
   |
25 |     fn discriminant() -> Option<u64> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
